syntax = "proto3";

package ru.otus;

option java_multiple_files = true;


message CounterRequest {
  int64 firstValue = 1;
  int64 lastValue = 2;
}

message CounterResponse {
  int64 responseValue = 1;
}

service RemoteCounterService {
  rpc countFromTo(CounterRequest) returns (stream CounterResponse);
}
